# CoreRender

./: .gitignore  .hgignore  CMakeLists.txt
CMake/: FindGameMath.cmake  FindTBB.cmake
CoreRender/: CMakeLists.txt  Doxyfile
CoreRender/docs/: CodingStyle.txt
CoreRender/include/: CoreRender.hpp  CoreScene.hpp
CoreRender/include/CoreRender/: GraphicsEngine.hpp
CoreRender/include/CoreRender/core/: Buffer.hpp  Color.hpp  ConditionVariable.hpp  File.hpp  FileList.hpp  FileSystem.hpp  FrameLimiter.hpp  Functor.hpp  Hardware.hpp  HashMap.hpp  Log.hpp  MemoryPool.hpp  Platform.hpp  ReferenceCounted.hpp  Semaphore.hpp  StandardFile.hpp  StandardFileSystem.hpp  StringTable.hpp  StructPacking.hpp  Thread.hpp  Time.hpp
CoreRender/include/CoreRender/math/: Alignment.hpp  BoundingBox.hpp  Frustum.hpp  Math.hpp  Matrix3.hpp  Matrix4.hpp  Plane.hpp  Quaternion.hpp  ScreenPosition.hpp  StdInt.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
CoreRender/include/CoreRender/render/: Animation.hpp  AnimationFile.hpp  BlendMode.hpp  DefaultUniform.hpp  DepthTest.hpp  FrameBuffer.hpp  FrameData.hpp  GeometryFile.hpp  GeometryManager.hpp  GraphicsEngine.hpp  Image.hpp  IndexBuffer.hpp  InputEvent.hpp  KeyCode.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelRenderable.hpp  Pipeline.hpp  PipelineCommand.hpp  PipelineDefinition.hpp  PipelineInfo.hpp  PipelineSequence.hpp  PipelineStage.hpp  PrimitiveType.hpp  RenderBatch.hpp  RenderCaps.hpp  RenderContext.hpp  RenderContextNull.hpp  RenderContextOpenGL.hpp  RenderContextReuseOpenGL.hpp  RenderJob.hpp  RenderObject.hpp  RenderPass.hpp  RenderPassInfo.hpp  RenderResource.hpp  RenderResourceFactory.hpp  RenderStats.hpp  RenderTarget.hpp  Renderable.hpp  (+15 more)
CoreRender/include/CoreRender/res/: DefaultResourceFactory.hpp  LoadingThread.hpp  NameRegistry.hpp  Resource.hpp  ResourceFactory.hpp  ResourceManager.hpp
CoreRender/include/CoreRender/scene/: AnimatedMesh.hpp  AnimatedModel.hpp  Animation.hpp  AnimationBinding.hpp  AnimationFile.hpp  Camera.hpp  CameraConfig.hpp  CameraSceneNode.hpp  GeometryFile.hpp  HeightMap.hpp  Light.hpp  LightManager.hpp  LightSceneNode.hpp  Mesh.hpp  Model.hpp  ModelSceneNode.hpp  PointLight.hpp  PointLightSceneNode.hpp  Scene.hpp  SceneNode.hpp  SpotLight.hpp  SpotLightSceneNode.hpp  Terrain.hpp
CoreRender/include/CoreRender/util/: FrameLimiter.hpp
CoreRender/src/: GraphicsEngine.cpp
CoreRender/src/core/: Buffer.cpp  ConditionVariable.cpp  FrameLimiter.cpp  Log.cpp  MemoryPool.cpp  Semaphore.cpp  StandardFile.cpp  StandardFileSystem.cpp  Thread.cpp  Time.cpp
CoreRender/src/render/: Animation.cpp  FrameBuffer.cpp  FrameData.hpp  GraphicsEngine.cpp  Image.cpp  Image.hpp  ImageDDS.cpp  ImageDDS.hpp  ImageLoaderDDS.cpp  ImageLoaderDDS.hpp  ImageLoaderSTB.cpp  ImageLoaderSTB.hpp  ImageSTB.cpp  ImageSTB.hpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelRenderable.cpp  Pipeline.cpp  PipelineCommand.cpp  PipelineDefinition.cpp  PipelineSequence.cpp  PipelineStage.cpp  RenderContextReuseOpenGL.cpp  RenderJob.cpp  RenderObject.cpp  RenderPass.cpp  RenderResource.cpp  RenderTarget.cpp  RenderThread.cpp  Renderer.cpp  Shader.cpp  ShaderCombination.cpp  ShaderText.cpp  Texture.cpp  Texture2D.cpp  UniformData.cpp  UploadManager.cpp  VertexBuffer.cpp  (+2 more)
CoreRender/src/render/null/: FrameBufferNull.hpp  IndexBufferNull.hpp  RenderCapsNull.hpp  ShaderNull.hpp  Texture2DNull.hpp  VertexBufferNull.hpp  VideoDriverNull.hpp
CoreRender/src/render/opengl/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.hpp  IndexBufferOpenGL.cpp  IndexBufferOpenGL.hpp  KeyCodeSDL.hpp  MeshOpenGL.cpp  MeshOpenGL.hpp  RenderCapsOpenGL.cpp  RenderCapsOpenGL.hpp  RenderContextGLCML.cpp  RenderContextGLCML.hpp  RenderContextGLFW.cpp  RenderContextGLFW.hpp  RenderContextSDL.cpp  RenderContextSDL.hpp  RenderWindowGLCML.cpp  RenderWindowGLCML.hpp  RenderWindowSDL.cpp  RenderWindowSDL.hpp  ShaderOpenGL.cpp  ShaderOpenGL.hpp  Texture2DOpenGL.cpp  Texture2DOpenGL.hpp  TextureOpenGL.cpp  TextureOpenGL.hpp  VertexBufferOpenGL.cpp  VertexBufferOpenGL.hpp  VideoDriverOpenGL.cpp  VideoDriverOpenGL.hpp
CoreRender/src/res/: LoadingThread.cpp  Resource.cpp  ResourceManager.cpp
CoreRender/src/scene/: AnimatedMesh.cpp  AnimatedModel.cpp  Animation.cpp  AnimationBinding.cpp  Camera.cpp  CameraConfig.cpp  CameraSceneNode.cpp  HeightMap.cpp  Light.cpp  LightManager.cpp  LightSceneNode.cpp  Mesh.cpp  Model.cpp  ModelSceneNode.cpp  PointLight.cpp  PointLightSceneNode.cpp  Scene.cpp  SceneNode.cpp  SpotLight.cpp  SpotLightSceneNode.cpp  Terrain.cpp
CoreRender/src/util/: FrameLimiter.cpp
CoreRenderUtil/: CMakeLists.txt
CoreRenderUtil/include/: CoreRenderUtil.hpp
Extensions/: CMakeLists.txt
Extensions/Rocket/: CMakeLists.txt
Extensions/Rocket/include/: CoreRenderRocket.hpp
Extensions/Rocket/include/CoreRender/rocket/: FileInterface.hpp  RenderInterface.hpp  RocketRenderable.hpp  RocketTexture.hpp  SystemInterface.hpp
Extensions/Rocket/src/: RenderInterface.cpp  RocketRenderable.cpp
Tests/: CMakeLists.txt
Tests/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Tests/core/: CMakeLists.txt  MemoryPool.cpp
Tests/math/: CMakeLists.txt  Matrix4.cpp
Tools/: CMakeLists.txt
Tools/ModelConverter/: CMakeLists.txt
Tools/ModelConverter/src/: main.cpp
Tutorials/: CMakeLists.txt
Tutorials/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Tutorials/PostProcessing/: CMakeLists.txt  PostProcessing.cpp
Tutorials/ProceduralContent/: CMakeLists.txt  ProceduralContent.cpp
Tutorials/RenderToTexture/: CMakeLists.txt  RenderToTexture.cpp
Tutorials/Scene/: CMakeLists.txt  Scene.cpp
Tutorials/Terrain/: CMakeLists.txt  Terrain.cpp
Tutorials/media/: Terrain.data
Tutorials/media/materials/: Blur.material.xml  Deferred.material.xml  Simple.material.xml  Terraintest.material.xml
Tutorials/media/models/: cube.geo  cube.material.xml  cube.model.xml  dwarf.anim  dwarf.geo  dwarf.material.xml  dwarf.model.xml  dwarf2.material.xml  dwarf2.model.xml  dwarfaxe.material.xml  jeep.geo  jeep.material.xml  jeep.model.xml  plane.geo  plane.material.xml  plane.model.xml
(+15 files in other folders)
